--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -62,21 +62,6 @@ spec:
             port:
               number: 32400
 ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: plex-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - marcus-server.lan
-#   ports:
-#     - number: 32400
-#       name: http
-#       protocol: HTTP
-#   resolution: DNS
-#   location: MESH_EXTERNAL
----
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -92,21 +77,6 @@ spec:
             host: marcus-server.lan
             port:
               number: 6987
----
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: nextcloud-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - marcus-server.lan
-#   ports:
-#     - number: 6987
-#       name: http
-#       protocol: HTTP
-#   resolution: DNS
-#   location: MESH_EXTERNAL
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -140,21 +110,6 @@ spec:
             port:
               number: 9000
 ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: minio-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - marcus-server.lan
-#   ports:
-#     - number: 9000
-#       name: http
-#       protocol: HTTP
-#   resolution: DNS
-#   location: MESH_EXTERNAL
----
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -170,23 +125,6 @@ spec:
             host: router.local
             port:
               number: 3000
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: agh-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - agh.local
-#   endpoints:
-#     - address: 192.168.3.1
-#   ports:
-#     - number: 3000
-#       name: http
-#       protocol: HTTP
-#   resolution: STATIC
-#   location: MESH_EXTERNAL
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -204,23 +142,6 @@ spec:
             port:
               number: 1000
 ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: opn-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - opn.local
-#   endpoints:
-#     - address: 192.168.1.1
-#   ports:
-#     - number: 1000
-#       name: http
-#       protocol: HTTP
-#   resolution: STATIC
-#   location: MESH_EXTERNAL
-# ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
@@ -252,21 +173,19 @@ spec:
             host: router.local
             port:
               number: 8443
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: ServiceEntry
-# metadata:
-#   name: ubiquiti-se
-#   namespace: istio-system
-# spec:
-#   hosts:
-#     - ubiquiti.local
-#   endpoints:
-#     - address: 192.168.1.4
-#   ports:
-#     - number: 8080
-#       name: http
-#       protocol: HTTP
-#   resolution: STATIC
-#   location: MESH_EXTERNAL
-# ---
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: grafana-vs
+spec:
+  hosts:
+    - grafana.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: marcus-server.lan
+            port:
+              number: 4000
