--- a/argocd/apps/mealie/deploy.yaml
+++ b/argocd/apps/mealie/deploy.yaml
@@ -16,15 +16,6 @@ spec:
       labels:
         app: mealie
     spec:
-      # affinity:
-      #   nodeAffinity:
-      #     requiredDuringSchedulingIgnoredDuringExecution:
-      #       nodeSelectorTerms:
-      #         - matchExpressions:
-      #             - key: kubernetes.io/hostname
-      #               operator: NotIn
-      #               values:
-      #                 - marcus-server
       containers:
         - image: ghcr.io/mealie-recipes/mealie:v2.6.0
           imagePullPolicy: IfNotPresent
@@ -54,22 +45,22 @@ spec:
           volumeMounts:
             - mountPath: /app/data
               name: data
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 5000
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 10
-          #   timeoutSeconds: 5
-          #   failureThreshold: 3
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: 5000
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 15
-          #   timeoutSeconds: 5
-          #   failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 9000
+            initialDelaySeconds: 30
+            periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 9000
+            initialDelaySeconds: 60
+            periodSeconds: 15
+            timeoutSeconds: 5
+            failureThreshold: 5
       restartPolicy: Always
       volumes:
         - name: data
