--- a/argocd/apps/infra/myspeed/deploy.yaml
+++ b/argocd/apps/infra/myspeed/deploy.yaml
@@ -14,7 +14,7 @@ spec:
   template:
     metadata:
       labels:
-        app: kuma
+        app: myspeed
     spec:
       containers:
         - image: germannewsmaker/myspeed:latest
