--- a/argocd/apps/minecraft/kustomization.yaml
+++ b/argocd/apps/minecraft/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- sts.yml
-- svc.yml
+- sts.yaml
+- svc.yaml
 - vs.yaml
