--- a/argocd/apps/minecraft/sts.yaml
+++ b/argocd/apps/minecraft/sts.yaml
@@ -24,6 +24,15 @@ spec:
                 name: mc
                 optional: true
           env: []
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: kubernetes.io/hostname
+                        operator: In
+                        values:
+                          - marcus-server
           image: itzg/minecraft-server
           stdin: true
           tty: true
