--- a/argocd/apps/minecraft/kustomization.yaml
+++ b/argocd/apps/minecraft/kustomization.yaml
@@ -1,6 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+configMapGenerator:
+  - name: mc-config
+    files:
+      - config.yaml
+
 resources:
 - sts.yaml
 - svc.yaml
