--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -11,3 +11,5 @@ data:
   MC_PORT: '25565'
   SNOOPER_ENABLED: "false"
   EXEC_DIRECTLY: "true"
+  MODPACK_PLATFORM: AUTO_CURSEFORGE
+  TYPE: AUTO_CURSEFORGE
