--- a/argocd/apps/infra/myspeed/deploy.yaml
+++ b/argocd/apps/infra/myspeed/deploy.yaml
@@ -22,10 +22,10 @@ spec:
           name: myspeed
           resources:
             limits:
-              cpu: 50m
-              memory: 250Mi
+              cpu: 500m
+              memory: 1Gi
             requests:
-              cpu: 25m
+              cpu: 50m
               memory: 150Mi
           ports:
             - containerPort: 5216
