--- a/argocd/apps/infra/myspeed/deploy.yaml
+++ b/argocd/apps/infra/myspeed/deploy.yaml
@@ -22,7 +22,7 @@ spec:
           name: myspeed
           resources:
             limits:
-              cpu: 500m
+              cpu: '2'
               memory: 1Gi
             requests:
               cpu: 50m
