--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -6,10 +6,11 @@ metadata:
   name: mc-config
 data:
   EULA: "TRUE"
+  DEBUG: "true"
   MEMORY: "8G"
   TZ: "America/Chicago"
-  MC_PORT: '25565'
+  MC_PORT: "25565"
   SNOOPER_ENABLED: "false"
   EXEC_DIRECTLY: "true"
   MODPACK_PLATFORM: AUTO_CURSEFORGE
-  CF_SLUG: gt-new-horizons  
+  CF_SLUG: gt-new-horizons
