--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -167,14 +167,17 @@ spec:
     - ui.yanello.net
   gateways:
     - istio-system/kube-gateway
-  tls:
+  http:
     - route:
         - destination:
             host: homeassistant.local
             port:
               number: 8443
+            subset: https
       match:
         - port: 443
+      tls:
+        - mode: SIMPLE
           sniHosts:
             - ui.yanello.net
 ---
