--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -168,7 +168,9 @@ spec:
   gateways:
     - istio-system/kube-gateway
   tls:
-    - route:
+    - match:
+        - port: 443
+      route:
         - destination:
             host: homeassistant.local
             port:
