--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -167,11 +167,9 @@ spec:
     - ui.yanello.net
   gateways:
     - istio-system/kube-gateway
-  tls:
+  http:
     - match:
         - port: 443
-          sniHosts:
-            - ui.yanello.net
       route:
         - destination:
             host: homeassistant.local
