--- a/argocd/apps/minecraft/deploy.yaml
+++ b/argocd/apps/minecraft/deploy.yaml
@@ -33,7 +33,7 @@ spec:
                 name: mc-config
             - secretRef:
                 name: mc-secrets
-          image: itzg/minecraft-server:java7
+          image: itzg/minecraft-server:java6-multiarch
           stdin: true
           tty: true
           volumeMounts:
