--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -16,4 +16,4 @@ data:
   CF_SLUG: gt-new-horizons
   GUI: "FALSE"
   CF_EXCLUDE_MODS: custommainmenu defaultserverlist guiscreen defaultworldgenerator
-  CF_FORCE_SYNCHRONIZE: "true"
+ # CF_FORCE_SYNCHRONIZE: "true"
