mc server mod exclusions6

--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -15,5 +15,11 @@ data:
   MODPACK_PLATFORM: AUTO_CURSEFORGE
   CF_SLUG: gt-new-horizons
   GUI: "FALSE"
-  CF_EXCLUDE_MODS: custom-main-menu custommainmenu defaultserverlist guiscreen defaultworldgenerator
- # CF_FORCE_SYNCHRONIZE: "true"
+  CF_EXCLUDE_MODS: |
+    custom-main-menu
+    custommainmenu
+    defaultserverlist
+    guiscreen
+    defaultworldgenerator
+    journeymap
+  # CF_FORCE_SYNCHRONIZE: "true"
