mc server mod exclusions9

--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -19,4 +19,4 @@ data:
     custom-main-menu
     defaultserverlist
     default-world-generator
-  CF_FORCE_SYNCHRONIZE: "true"
+  # CF_FORCE_SYNCHRONIZE: "true"
