--- a/argocd/apps/minecraft/svc.yaml
+++ b/argocd/apps/minecraft/svc.yaml
@@ -3,12 +3,16 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mc
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 10.10.8.7
   labels:
     service: mc
 spec:
   ports:
-  - name: http
+  - name: tcp
     port: 25565
+    protocol: TCP
     targetPort: 25565
   selector:
     server: mc
+  type: LoadBalancer
