--- a/argocd/apps/minecraft/cm.yaml
+++ b/argocd/apps/minecraft/cm.yaml
@@ -15,8 +15,5 @@ data:
   MODPACK_PLATFORM: AUTO_CURSEFORGE
   CF_SLUG: gt-new-horizons
   GUI: "FALSE"
-  CF_EXCLUDE_MODS: |
-    custom-main-menu
-    defaultserverlist
-    default-world-generator
+  CF_EXCLUDE_MODS: custom-main-menu,defaultserverlist,default-world-generator
   # CF_FORCE_SYNCHRONIZE: "true"
