--- a/argocd/apps/infra/monitoring/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-  - name: vm-stack
+  - name: victoria-metrics-k8s-stack
     repo: https://victoriametrics.github.io/helm-charts/
     version: "0.33.5"
-    releaseName: victoria-metrics-k8s-stack
