--- a/argocd/apps/infra/monitoring/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 helmCharts:
   - name: victoria-metrics-k8s-stack
     repo: https://victoriametrics.github.io/helm-charts/
-    version: "0.33.5"
+    version: "*"
     valuesFile: values.yaml
