--- a/argocd/apps/infra/istio/resources/cert.yaml
+++ b/argocd/apps/infra/istio/resources/cert.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: default-cert
+  name: default-internal-cert
   namespace: istio-system
 spec:
   commonName: yanello.net
@@ -11,5 +11,21 @@ spec:
   secretName: default-ingress-cert
   issuerRef:
     name: local-intermediate-ca1-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: default-cert
+  namespace: istio-system
+spec:
+  commonName: yanello.net
+  dnsNames:
+  - "*.yanello.net"
+  - yanello.net
+  secretName: default-ingress-cert
+  issuerRef:
+    name: letsencrypt-staging
     kind: ClusterIssuer
     group: cert-manager.io
