use prod letsencrypt

--- a/argocd/apps/infra/istio/resources/cert.yaml
+++ b/argocd/apps/infra/istio/resources/cert.yaml
@@ -26,6 +26,6 @@ spec:
   - yanello.net
   secretName: default-ingress-cert
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-prod
     kind: ClusterIssuer
     group: cert-manager.io
