--- a/argocd/apps/infra/cert-manager/resources.yaml
+++ b/argocd/apps/infra/cert-manager/resources.yaml
@@ -4,18 +4,21 @@ metadata:
   name: letsencrypt-prod
 spec:
   acme:
-    # The ACME server URL
+    # # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
-    # Email address used for ACME registration
+    # # Email address used for ACME registration
     email: marcus@yanello.net
-    # Name of a secret used to store the ACME account private key
+    # # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
-    # Enable the HTTP-01 challenge provider
+    # # Enable the HTTP-01 challenge provider
     solvers:
-      - http01:
-          ingress:
-            ingressClassName: istio
+      - dns01:
+          cloudflare:
+            email: marcus.yanello@gmail.com
+            apiTokenSecretRef:
+              name: cloudflare-api-token
+              key: api-token
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
