--- a/argocd/apps/infra/cert-manager/resources.yaml
+++ b/argocd/apps/infra/cert-manager/resources.yaml
@@ -17,7 +17,7 @@ spec:
           cloudflare:
             email: marcus.yanello@gmail.com
             apiTokenSecretRef:
-              name: cloudflare-api-token
+              name: cloudflare-api-token-secret
               key: api-token
 # ---
 # apiVersion: cert-manager.io/v1
