--- a/argocd/apps/infra/cert-manager/kustomization.yaml
+++ b/argocd/apps/infra/cert-manager/kustomization.yaml
@@ -9,5 +9,6 @@ helmCharts:
     repo: https://charts.jetstack.io
     version: "v1.17.1"
     releaseName: cert-manager
+    namespace: cert-manager
     valuesFile: values.yaml
 
