--- a/argocd/apps/infra/cert-manager/resources.yaml
+++ b/argocd/apps/infra/cert-manager/resources.yaml
@@ -16,7 +16,7 @@ spec:
       - dns01:
           cloudflare:
             email: marcus.yanello@gmail.com
-            apiTokenSecretRef:
+            apiKeySecretRef:
               name: cloudflare-api-token-secret
               key: api-token
 # ---
