--- a/argocd/apps/infra/cert-manager/cert-secret.yaml
+++ b/argocd/apps/infra/cert-manager/cert-secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cloudflare-api-token-secret
+    name: cloudflare-api-key
 type: Opaque
 stringData:
-    api-token: ENC[AES256_GCM,data:T4q4ilQEf9dnQ2ZuoM5zGl6Z7BuwO5A20C+/IIy0B95LlBiqGQ==,iv:eMQr30Bq7NXGT2i24R5s5rnrI8emfOxm+BKhOdbZ/J4=,tag:Gwy8DEzGHRemR4SfG/eJYg==,type:str]
+    api-key: ENC[AES256_GCM,data:2ImL18oFRFlulRtL4h+6Bs8XVSAcDUjTctkRFGCQs1rKBz7wQw==,iv:Q2a9DLd/0zW4YBAY6f5knUyGRdSOomfznY0a7vH6CG8=,tag:/+LyDOIPqWggQSenM7Jw/w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +20,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-15T04:16:28Z"
-    mac: ENC[AES256_GCM,data:MJJJBf7uQLdNCxSt9p5XKHwAxz2Ud0ISxrUltqopJVhL6sy5jPsl7a+n5B8fuy41LO3Zyzx45b0IHIQM1dtdvzTuljVVNU01UfFiBUeNmqPd8y73HfSrJ5peHeh8Zc0cBtdZJOIgGcGpMMyLW3FtyrmKxTwLkFmz6dl7Uv+08Sw=,iv:WimDPOBYkak0+UywX+jf4fCOTQn4U8XU2Vol6WXnA1o=,tag:QLUCAEtBzRkM9Jcz4CTpTQ==,type:str]
+    lastmodified: "2025-02-15T15:43:01Z"
+    mac: ENC[AES256_GCM,data:BfuGZU2cbPuTTqYsvggXNhlNG20FSXnPhS/k0bFy96xBZjSCaQ74Bv2Ti0z74mMhvqLUCpW0rjWOQRYyxSBTo3ETnSEmuJDl5oag7XtGV4zAdVOEpogX05AELgM46iR0LbKI6e9rsBjGreQZrU0XswayUjZ3T1b95GG2jK6Dhjc=,iv:I70zryqOTN9TRGhveKJYIMg0JU8Ryo/ztU5m6g5Cd68=,tag:vrt7gX3dj95un9iVzsz+9g==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
