--- a/argocd/apps/infra/cert-manager/values.yaml
+++ b/argocd/apps/infra/cert-manager/values.yaml
@@ -4,4 +4,4 @@ webhook:
   featureGates: NameConstraints=true
 extraArgs:
   - --dns01-recursive-nameservers-only
-  - --dns01-recursive-nameservers=8.8.8.8:53\,1.1.1.1:53
+  - --dns01-recursive-nameservers=8.8.8.8:53
