--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -7,7 +7,8 @@ spec:
     istio: ingressgateway
   servers:
   - hosts:
-    - '*'
+      - "*.yanello.net"
+      - yanello.net
     port:
       name: http
       number: 80
