--- a/argocd/apps/homebox/vs.yaml
+++ b/argocd/apps/homebox/vs.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: mealie-vs
+  name: homebox-vs
 spec:
   hosts:
   - homebox.yanello.net
