--- a/argocd/apps/homebox/deploy.yaml
+++ b/argocd/apps/homebox/deploy.yaml
@@ -26,7 +26,7 @@ spec:
               value: '100'
             - name: HBOX_ALLOW_REGISTRATION
               value: 'false'
-          image: ghcr.io/hay-kot/homebox:latest@sha256:b1fbca6fc1ad2bd3634d13056d1bc0242cf92e9bad4ca21ce57589be3fe4987e
+          image: ghcr.io/sysadminsmedia/homebox:latest
           imagePullPolicy: IfNotPresent
           name: homebox
           resources:
