--- a/argocd/apps/infra/istio/resources/envoyFilter.yaml
+++ b/argocd/apps/infra/istio/resources/envoyFilter.yaml
@@ -5,18 +5,19 @@ metadata:
   namespace: istio-system
 spec:
   configPatches:
-  - applyTo: NETWORK_FILTER
-    match:
-      context: GATEWAY
-      listener:
-        filterChain:
-          filter:
-            name: envoy.filters.network.http_connection_manager
-    patch:
-      operation: MERGE
-      value:
-        typed_config:
-          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-          use_remote_address: true
-          xff_num_trusted_hops: 1
-          skip_xff_append: true
+    - applyTo: NETWORK_FILTER
+      match:
+        context: GATEWAY
+        listener:
+          filterChain:
+            filter:
+              name: envoy.filters.network.http_connection_manager
+      patch:
+        operation: MERGE
+        value:
+          typed_config:
+            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+            use_remote_address: true
+            xff_num_trusted_hops: 1
+            skip_xff_append: true
+            preserve_external_request_id: true
