use rolling updates

--- a/argocd/apps/change-detection/deploy.yaml
+++ b/argocd/apps/change-detection/deploy.yaml
@@ -10,7 +10,10 @@ spec:
     matchLabels:
       app: change-detection
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -74,7 +77,10 @@ spec:
     matchLabels:
       app: playwright
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
