--- a/argocd/apps/media-server/calibre/deploy.yaml
+++ b/argocd/apps/media-server/calibre/deploy.yaml
@@ -10,7 +10,10 @@ spec:
     matchLabels:
       app: calibre-dl
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -76,7 +79,10 @@ spec:
     matchLabels:
       app: calibre
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -154,7 +160,10 @@ spec:
     matchLabels:
       app: cloudflareproxy
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
