--- a/argocd/apps/homebox/deploy.yaml
+++ b/argocd/apps/homebox/deploy.yaml
@@ -10,7 +10,10 @@ spec:
     matchLabels:
       app: homebox
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -23,9 +26,9 @@ spec:
             - name: HBOX_LOG_FORMAT
               value: text
             - name: HBOX_WEB_MAX_UPLOAD_SIZE
-              value: '100'
+              value: "100"
             - name: HBOX_ALLOW_REGISTRATION
-              value: 'false'
+              value: "false"
           image: ghcr.io/sysadminsmedia/homebox:latest
           imagePullPolicy: IfNotPresent
           name: homebox
