--- a/argocd/apps/infra/backrest/deploy.yaml
+++ b/argocd/apps/infra/backrest/deploy.yaml
@@ -10,7 +10,10 @@ spec:
     matchLabels:
       app: backrest
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
