--- a/argocd/apps/media-server/bazarr/deploy.yaml
+++ b/argocd/apps/media-server/bazarr/deploy.yaml
@@ -11,7 +11,10 @@ spec:
     matchLabels:
       app: bazarr
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
