--- a/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
@@ -11,7 +11,10 @@ spec:
   replicas: 1
   revisionHistoryLimit: 3
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
