--- a/argocd/apps/resume/deploy.yaml
+++ b/argocd/apps/resume/deploy.yaml
@@ -14,7 +14,10 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: rx-resume
@@ -170,7 +173,10 @@ spec:
     matchLabels:
       app: postgres
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
