--- a/argocd/apps/paperless/deploy.yaml
+++ b/argocd/apps/paperless/deploy.yaml
@@ -11,7 +11,10 @@ spec:
     matchLabels:
       app: paperless
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -79,7 +82,10 @@ spec:
     matchLabels:
       app: paperless-db
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -131,7 +137,10 @@ spec:
     matchLabels:
       app: paperless-redis
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
