--- a/argocd/apps/ytdl/ingress.yaml
+++ b/argocd/apps/ytdl/ingress.yaml
@@ -1,17 +1,16 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
 metadata:
   name: ytdl
 spec:
-  ingressClassName: istio
-  rules:
-    - host: ytdl.yanello.net
-      http:
-        paths:
-          - backend:
-              service:
-                name: ytdl
-                port:
-                  number: 17442
-            path: /
-            pathType: Prefix
+  hosts:
+    - ytdl.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: ytdl
+            port:
+              number: 17442
