istio traffic pol

--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -80,6 +80,7 @@ spec:
     chart: gateway
     helm:
       valuesObject:
+        externalTrafficPolicy: Local
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
