--- a/argocd/apps/media-server/ombi/ingress.yaml
+++ b/argocd/apps/media-server/ombi/ingress.yaml
@@ -1,19 +1,19 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: ombi
-  labels:
-    app: ombi
-spec:
-  ingressClassName: istio
-  rules:
-    - host: ombi.yanello.net
-      http:
-        paths:
-          - backend:
-              service:
-                name: ombi
-                port:
-                  number: 3579
-            path: /
-            pathType: Prefix
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: ombi
+#   labels:
+#     app: ombi
+# spec:
+#   ingressClassName: istio
+#   rules:
+#     - host: ombi.yanello.net
+#       http:
+#         paths:
+#           - backend:
+#               service:
+#                 name: ombi
+#                 port:
+#                   number: 3579
+#             path: /
+#             pathType: Prefix
