--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -45,15 +45,15 @@ spec:
     repoURL: https://istio-release.storage.googleapis.com/charts
     targetRevision: "1.24.3"
     chart: istiod
-    helm:
-      valuesObject:
-        global:
-          istioNamespace: istio-system
+    # helm:
+      # valuesObject:
+        # global:
+          # istioNamespace: istio-system
           # logging:
           #   level: "all:debug"
-        meshConfig:
-          ingressService: istio-gateway
-          ingressSelector: gateway
+        # meshConfig:
+        #   ingressService: istio-gateway
+        #   ingressSelector: gateway
 
 ---
 apiVersion: argoproj.io/v1alpha1
